# AdventOfCode2025

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
db/: .gitignore  results.db
gitHooks/: pre-commit
input/: encrypted_inputs_tar
migrations/01-create_table/: down.sql  up.sql
migrations/02-add_days/: down.sql  up.sql
migrations/02-add_years/: down.sql  up.sql
migrations/03-add_2025_days/: down.sql  up.sql
migrations/04-add_2024_days/: down.sql  up.sql
src/: lib.rs  main.rs
src/cli/: arguments.rs  helpers.rs  mod.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  day_factory.rs  mod.rs
src/db/: mod.rs  record.rs  record_timings.rs  sqlite.rs  timing_result.rs
src/db/sqlite/: connection.rs  median.rs  mod.rs  sqlite.rs
src/macros/: list_days.rs  match_days.rs  mod.rs
src/timings/: mod.rs  record_timings.rs  time_day.rs  timing_result.rs
src/traits/: day.rs  mod.rs  timing_repository.rs  year.rs
src/utils/: get_input_data.rs  grid.rs  mod.rs  parse_input_data.rs  point.rs  traverse.rs
src/years/: mod.rs  year.rs  year_factory.rs
src/years/year2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  day_factory.rs  mod.rs
(+12 files in other folders)
