[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled", "functions"] }
rusqlite_migration = { version = "2.3.0", features = ["from-directory"] }
dotenvy = "0.15"
ndarray = "0.16.1"
regex = "1"
include_dir = "0.7.4"
dialoguer = "0.12.0"
strum = "0.27"
strum_macros = "0.27"
